add raty library

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -28,13 +28,49 @@
             </tr>
           </tbody>
         </table>
+        <%= link_to "Write A Review", new_movie_review_path(@movie)%>
       </div>
+      </div>
+      <div class='col-md-7 col-md-offset-1'>
+        <h1 class='review_title'><%=@movie.title%></h1>
+        <p><%=@movie.descript%></p>
+
+        <% if @reviews.blank? %>
+        <h3>No Reviews exist, would you like to create one! </h3>
+        <%= link_to "Write a Review", new_movie_review_path(@movie), class:'btn btn-danger'%>
+        <% else %>
+        <% @reviews.each do |review| %>
+        <div class='reviews'>
+          <!-- <p><%#= review.rating %></p> -->
+          <div class='star-rating' data-score=<%=review.rating%> ></div>
+          <p><%= review.comment %></p>
+          <%end%>
+          <%end%>
+        </div>
       </div>
   </div>
 </div>
 </div>
 
 <%#= image_tag @movie.image.url(:medium) %>
+
+<script>
+$('.star-rating').raty({
+  path: '/assets/',
+  readOnly: true,
+  score: function(){
+    return $(this).attr('data-score');
+  }
+});
+</script>
+<!-- <div></div> -->
+
+<script src="jquery.raty.js">
+$('.star-rating').raty('score');
+</script>
+
+<div></div>
+
 
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
